esio: move docs to doxygen dir for #1111
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@15434 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/Makefile.am
+++ b/Makefile.am
@@ -92,7 +92,7 @@ libtool: $(LIBTOOL_DEPS)
 	cd apps  && $(MAKE) $(AM_MAKEFLAGS) .license.stamp
 
 # Required for AX_PROG_DOXYGEN
-include doxygen.am
+include doxygen/doxygen.am
 
 # Required for AX_AM_MACROS
 @INC_AMINCLUDE@
