--- a/configure.ac
+++ b/configure.ac
@@ -90,7 +90,7 @@ DX_RTF_FEATURE([OFF])
 DX_XML_FEATURE([OFF])
 DX_PDF_FEATURE([OFF])
 DX_PS_FEATURE([OFF])
-DX_INIT_DOXYGEN([esio],[doxygen.cfg],[docs])
+DX_INIT_DOXYGEN([esio],[doxygen/doxygen.cfg],[docs])
 
 #--------------------------
 # Checks for code coverage
