esio: main documentation page per #1111
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@15441 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,10 +4,10 @@ ACLOCAL_AMFLAGS = -I m4
 AUTOMAKE_OPTIONS = foreign
 
 # Build in these directories:
-SUBDIRS = lib esio tests apps
+SUBDIRS = lib esio tests apps doxygen
 
 # Distribute these items:
-DIST_SUBDIRS = lib esio tests apps
+DIST_SUBDIRS = lib esio tests apps doxygen
 EXTRA_DIST  = bootstrap
 EXTRA_DIST += $(DX_CONFIG)
 EXTRA_DIST += build-aux/sfmakedepend.pl
