esio: trim frame + activate public headers
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@15444 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/esio/version.h.in
+++ b/esio/version.h.in
@@ -26,6 +26,10 @@
 #ifndef __ESIO_VERSION_H__
 #define __ESIO_VERSION_H__
 
+/** @file
+ * Provides ESIO version information.
+ */
+
 #define ESIO_MAJOR_VERSION @AX_MAJOR_VERSION@
 #define ESIO_MINOR_VERSION @AX_MINOR_VERSION@
 #define ESIO_POINT_VERSION @AX_POINT_VERSION@
