esio: partial concepts and example per #1112
Adds buildable content to the examples directory
Adds concepts page that's partially complete

git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@15461 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/configure.ac
+++ b/configure.ac
@@ -109,6 +109,7 @@ AC_CONFIG_FILES([
     doxygen/Makefile
     esio/Makefile
     esio/version.h
+    examples/Makefile
     lib/Makefile
     tests/Makefile
 ])
