esio: add field XMACROs per #1115
Tweaked sfmakedepend to capture #include dependencies

git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@15514 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/sfmakedepend.am
+++ b/sfmakedepend.am
@@ -10,7 +10,8 @@ BUILT_SOURCES += Makefile.dep
 CLEANFILES    += Makefile.dep
 
 SFMAKEDEPEND_INVOKE = $(PERL) $(top_srcdir)/build-aux/sfmakedepend.pl
-SFMAKEDEPEND_FLAGS  = $(subst -I,-I ,$(filter -I%,$(AM_FCFLAGS)))      \
+SFMAKEDEPEND_FLAGS  = -I $(srcdir)                                     \
+                      $(subst -I,-I ,$(filter -I%,$(AM_FCFLAGS)))      \
                       -i mpi -i hdf5 -i h5lt -i esio -i grvy -i ifport \
                       -strip
 
