esio: #1115 add line/plane XMACROs
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@15515 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/esio/Makefile.am
+++ b/esio/Makefile.am
@@ -48,6 +48,8 @@ EXTRA_DIST += layout1.c
 EXTRA_DIST += line.c
 EXTRA_DIST += plane.c
 EXTRA_DIST += field.f90
+EXTRA_DIST += line.f90
+EXTRA_DIST += plane.f90
 
 # Public Fortran library is a superset of libesio.la
 noinst_LTLIBRARIES       += libesiof.la
