--- a/esio/Makefile.am
+++ b/esio/Makefile.am
@@ -47,6 +47,7 @@ EXTRA_DIST += layout0.c
 EXTRA_DIST += layout1.c
 EXTRA_DIST += line.c
 EXTRA_DIST += plane.c
+EXTRA_DIST += attribute.f90
 EXTRA_DIST += field.f90
 EXTRA_DIST += line.f90
 EXTRA_DIST += plane.f90
