esio: run toplevel make serially
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@15555 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/Makefile.am
+++ b/Makefile.am
@@ -42,6 +42,9 @@ MAINTAINERCLEANFILES =     \
     src/Makefile.in        \
     src/stamp.h.in
 
+# Run toplevel makefile serially; submakes may still be parallel
+.NOTPARALLEL:
+
 # Additional tasks run with the 'all' target
 all-local:  libtool
 
