--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -23,13 +23,14 @@ AM_CPPFLAGS += $(HDF5_CPPFLAGS)
 AM_FCFLAGS  += $(HDF5_FFLAGS)
 
 # Sample progams
-noinst_PROGRAMS    += concepts1
-concepts1_SOURCES   = concepts1.c
-concepts1_LDADD     = ../esio/libesio.la $(HDF5_LDFLAGS)
+noinst_PROGRAMS        += concepts1
+concepts1_SOURCES       = concepts1.c
+concepts1_LDADD         = ../esio/libesio.la $(HDF5_LDFLAGS)
 
-#noinst_PROGRAMS        += concepts2
-#concepts2_SOURCES       = concepts2.f90
-#concepts2_LIBTOOLFLAGS  = --tag=FC
+noinst_PROGRAMS        += concepts2
+concepts2_SOURCES       = concepts2.f90
+concepts2_LDADD         = ../esio/libesiof.la $(HDF5_LDFLAGS)
+concepts2_LIBTOOLFLAGS  = --tag=FC
 
 # Additional files to clean
 CLEANFILES += *.mod *.gcno
