esio: #1116 stub Fortran unit tests
Got barebones Fortran unit test binaries in place
and plugged into the build.  MPI setup/teardown and
ESIO setup/teardown working.

git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@16165 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/sfmakedepend.am
+++ b/sfmakedepend.am
@@ -12,7 +12,8 @@ CLEANFILES    += Makefile.dep
 SFMAKEDEPEND_INVOKE = $(PERL) $(top_srcdir)/build-aux/sfmakedepend.pl
 SFMAKEDEPEND_FLAGS  = -I $(srcdir)                                     \
                       $(subst -I,-I ,$(filter -I%,$(AM_FCFLAGS)))      \
-                      -i mpi -i hdf5 -i h5lt -i esio -i grvy -i ifport \
+                      -i mpi -i hdf5 -i h5lt -i grvy -i ifport         \
+                      -i esio -i esio_c_binding                        \
                       -strip
 
 Makefile.dep: $(wildcard $(srcdir)/*.[Ff] $(srcdir)/*.[Ff]90)
