esio: add *.gcda to local clean targets
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@16166 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/apps/Makefile.am
+++ b/apps/Makefile.am
@@ -42,7 +42,7 @@ main_LIBTOOLFLAGS  = --tag=FC
 main.f90: header.o                       # Explicit module dependence
 
 # Additional files to clean
-CLEANFILES += *.mod *.gcno
+CLEANFILES += *.mod *.gcno *.gcda
 
 # License updates
 include $(top_srcdir)/license.am
