esio: #1116 improve assertion details
Roll assertion checking into framework.
Add verbose mode at runtime based on ESIO_TEST_VERBOSE env.

git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@16184 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -12,10 +12,11 @@ noinst_HEADERS  = fct.h
 noinst_PROGRAMS = # Append below
 BUILT_SOURCES   = # Append below
 CLEANFILES      = # Append below
-EXTRA_DIST      = layout_template.c \
-                  plane_template.c  \
-                  line_template.c   \
-                  attribute_template.c
+EXTRA_DIST      = layout_template.c     \
+                  plane_template.c      \
+                  line_template.c       \
+                  attribute_template.c  \
+                  testframework_assert.h
 
 TESTS              = # Append below
 TESTS_ENVIRONMENT  = ESIO_TEST_INPUT_DIR=$(srcdir)
