esio: #1189 layout2 build/tests from layout0
Copied layout0 functionality into layout2.
Build and tests in place.

git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@16218 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/esio/Makefile.am
+++ b/esio/Makefile.am
@@ -45,6 +45,7 @@ noinst_HEADERS += metadata.h
 # Templated implementation files necessary for building the library
 EXTRA_DIST += layout0.c
 EXTRA_DIST += layout1.c
+EXTRA_DIST += layout2.c
 EXTRA_DIST += line.c
 EXTRA_DIST += plane.c
 EXTRA_DIST += attribute.f90
