esio: add toplevel check-programs target
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@16237 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/Makefile.am
+++ b/Makefile.am
@@ -54,6 +54,10 @@ html-local: doxygen-run
 # Target for all documentation
 docs: doxygen-run
 
+# Target to build test-related programs within tests subdirectory
+check-programs: all
+	cd tests && $(MAKE) $(AM_MAKEFLAGS) check-programs
+
 # -------------------------------------------
 # Optional support for code coverage analysis
 # -------------------------------------------
