--- a/esio.pc.in
+++ b/esio.pc.in
@@ -12,6 +12,10 @@ mpicc=@MPICC_LOCATION@
 mpifc=@MPIFC_LOCATION@
 hdf5_fflags=@HDF5_FFLAGS@
 hdf5_flibs=@HDF5_FLIBS@
+# Fortran compilation and linking information
+# Retrieve these using `pkg-config --variable=name @PACKAGE_NAME@`
+fflags=-I@libdir@
+flibs=-L@libdir@ -lesiof
 
 Name: @PACKAGE_NAME@
 Description: @PACKAGE_DESCRIPTION@
