esio: add gnulib copy-file module for #1167
Required adding gnulib support:
 - Renamed 'lib' placeholder to 'gnulib'
 - Adding libgnu.a into libesio.la now
 - Appropriate bootstrap/Makefile updates

git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@16289 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/configure.ac
+++ b/configure.ac
@@ -34,6 +34,8 @@ dnl Manipulate C settings and find MPI/HDF5
 dnl ------------------------------------------------
 AX_CHECK_ENABLE_DEBUG
 AC_PROG_CC
+gl_EARLY
+gl_INIT
 AC_LANG_PUSH([C])
 if test "x$ax_enable_debug" != "xno"; then
     AX_TRACEBACK()
@@ -137,7 +139,7 @@ AC_CONFIG_FILES([
     esio/Makefile
     esio/version.h
     examples/Makefile
-    lib/Makefile
+    gnulib/Makefile
     tests/Makefile
 ])
 
