esio: add symbol visibility beginnings #1167
Starting to work in symbol visibility per http://gcc.gnu.org/wiki/Visibility

git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@16293 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/esio/Makefile.am
+++ b/esio/Makefile.am
@@ -39,6 +39,7 @@ esio_includedir       = $(includedir)/esio
 esio_include_HEADERS  = error.h
 esio_include_HEADERS += esio.h
 esio_include_HEADERS += version.h
+esio_include_HEADERS += visibility.h
 
 # Headers internal to the library
 noinst_HEADERS += file-copy.h
