esio: incorporate GCC visibility hiding #1167
Explicitly marking public portions of API as public in C.
Done to allow gnulib symbols to stay hidden.
Created esio/visibility.h
Doxygen tweaked to hide ESIO_API markers in declarations.
Move esio_handle_initialize_fortran into esio.h
Added ax_visibility macro.


FIX: Install Fortran library during 'make install'

git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@16323 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/configure.ac
+++ b/configure.ac
@@ -48,6 +48,7 @@ MPICC_LOCATION=$(eval command -v $MPICC)
 AC_SUBST([MPICC_LOCATION])
 AX_MPIP()
 AX_LIB_HDF5([parallel])
+AX_VISIBILITY([hidden])
 AC_LANG_POP([C])
 AC_CACHE_SAVE
 
@@ -102,7 +103,7 @@ dnl ------------------------------------------------
 dnl Enable GNU libtool
 dnl Current version checks also in Makefile.am
 dnl ------------------------------------------------
-LT_INIT
+LT_INIT([disable_static])
 LT_PREREQ([2.2.6])
 AC_SUBST(LIBTOOL_DEPS)
 AC_CACHE_SAVE
