esio: do not distribute bootstrap script
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@16340 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/Makefile.am
+++ b/Makefile.am
@@ -8,7 +8,7 @@ SUBDIRS = gnulib esio examples tests apps doxygen
 
 # Distribute these items:
 DIST_SUBDIRS = gnulib esio examples tests apps doxygen
-EXTRA_DIST   = bootstrap
+EXTRA_DIST   = # bootstrap not to be distributed in tarballs
 EXTRA_DIST  += $(DX_CONFIG)
 EXTRA_DIST  += build-aux/sfmakedepend.pl
 EXTRA_DIST  += build-aux/update_license.pl
